# graphix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Insomnia-collection-v4.json  LICENSE-APACHE  LICENSE-MIT  README.md  brew.sh  cloudbuild.yaml  rust-toolchain.toml  schema.rs
api-server/: Cargo.toml
api-server/src/: main.rs  opt.rs  schema.rs
backend/crates/api-server/: Cargo.toml
backend/crates/api-server/src/: main.rs  opt.rs
backend/crates/common/: Cargo.toml
backend/crates/common/graphql/indexer/: pois.gql
backend/crates/common/migrations/2021-12-06-133804_proofs_of_indexing/: down.sql
backend/crates/common/migrations/2022-02-04-164229_add_diverging_block_field/: up.sql
backend/crates/common/migrations/2023-03-30-000000_initial_schema/: up.sql
backend/crates/common/migrations/2023-05-26-125000_caip2/: down.sql
backend/crates/common/migrations/2023-09-15-173000_add_report_blob/: down.sql  up.sql
backend/crates/common/migrations/2023-10-09-122825_cleanup/: up.sql
backend/crates/common/migrations/2023-12-04-133234_indexing_status/: down.sql
backend/crates/common/migrations/2023-12-11-181933_new_columns/: down.sql  up.sql
backend/crates/common/src/: api_types.rs  bisect.rs  block_choice.rs  config.rs  lib.rs  network_subgraph.rs  prometheus_metrics.rs  queries.rs  types.rs
backend/crates/common/src/db/: diesel_queries.rs  mod.rs  models.rs  proofs_of_indexing.rs  schema.rs  tests.rs
backend/crates/common/src/graphql_api/: admin.rs  mod.rs  server.rs  types.rs
backend/crates/common/src/indexer/: interceptor.rs  mod.rs  real_indexer.rs  types.rs
backend/crates/common/src/indexing_statuses/: query.rs
backend/crates/common/src/modes/: testing.rs
backend/crates/common/src/network_subgraph/: mod.rs
backend/crates/common/src/network_subgraph_client/: mod.rs
backend/crates/common/src/proofs_of_indexing/: query.rs
backend/crates/common/src/store/: diesel_queries.rs  mod.rs  models.rs  schema.rs  tests.rs
backend/crates/common/src/test_utils/: gen.rs  mocks.rs  mod.rs
backend/crates/common/src/tests/: gen.rs  mocks.rs
backend/crates/common/tests/: indexing_statuses.rs  it_indexing_statuses.rs  it_proofs_of_indexing.rs  proofs_of_indexing.rs
backend/crates/cross-checker/: Cargo.toml
backend/crates/cross-checker/src/: bisect.rs  cross_checking.rs  main.rs  utils.rs
backend/crates/cross-checker/src/indexing_statuses/: query.rs
backend/crates/cross-checker/src/proofs_of_indexing/: bisect.rs  cross_checking.rs  query.rs
backend/crates/cross-checker/src/tests/: gen.rs  indexing_statuses.rs  mocks.rs  mod.rs  proofs_of_indexing.rs
common/: Cargo.toml  build.rs
common/graphql/: touch-this-file-to-refetch-schema
common/graphql/indexer/: schema.gql
common/graphql/indexer/queries/: poi-debug-data.gql
common/src/: api_schema.rs  api_types.rs  lib.rs  types.rs
common/src/db/: mod.rs  models.rs  proofs_of_indexing.rs  schema.rs
common/src/indexer/: real_indexer.rs  types.rs
crates/autogen_config_json_schema/: Cargo.toml  build.rs  schema.json
crates/autogen_graphql_schema/: Cargo.toml  api_schema.graphql  build.rs
crates/common_types/: Cargo.toml
crates/common_types/src/: api_key_permission_level.rs  hex_string.rs  inputs.rs  ipfs_cid.rs  lib.rs
crates/graphix/: Cargo.toml  main.rs
crates/graphix-lib/: Cargo.toml
crates/graphix-lib/src/: block_choice.rs  config.rs  lib.rs  queries.rs  unforgiving_indexer_client.rs
crates/graphix-lib/src/graphql_api/: mod.rs  server.rs
crates/graphix-lib/src/test_utils/: gen.rs  mocks.rs  mod.rs
crates/graphix-lib/tests/: it_indexing_statuses.rs  it_proofs_of_indexing.rs
crates/graphix/src/: bisect.rs  main.rs  utils.rs
crates/graphix_lib/: Cargo.toml
crates/graphix_lib/src/: bisect.rs  block_choice.rs  cli.rs  config.rs  indexing_loop.rs  lib.rs  queries.rs
crates/graphix_lib/src/graphql_api/: api_types.rs  mod.rs  mutation_root.rs  mutations.rs  queries.rs  query_root.rs  server.rs
crates/graphix_lib/src/test_utils/: gen.rs  mocks.rs  mod.rs
crates/graphix_lib/tests/: indexing_statuses.rs  it_indexing_statuses.rs  it_proofs_of_indexing.rs  proofs_of_indexing.rs
crates/indexer-client/: Cargo.toml
crates/indexer-client/graphql/indexer/queries/: block-data.gql  entity-changes-in-block.gql  indexing-statuses.gql  subgraph-api-versions.gql
crates/indexer-client/src/: interceptor.rs  lib.rs  real_indexer.rs
crates/indexer_client/: Cargo.toml
crates/indexer_client/src/: interceptor.rs  lib.rs  real_indexer.rs
crates/network-sg-client/: Cargo.toml
crates/network-sg-client/src/: lib.rs
crates/network-sg-client/src/queries/: indexer_by_address.graphql  indexers_by_allocations.graphql
crates/network_sg_client/: Cargo.toml
crates/network_sg_client/src/: lib.rs
crates/store/: Cargo.toml
crates/store/migrations/2023-03-30-000000_initial_schema/: up.sql
crates/store/migrations/2023-05-26-125000_caip2/: up.sql
crates/store/migrations/2023-12-04-133234_versions/: up.sql
crates/store/migrations/2024-01-22-122801_non_null_address/: down.sql
crates/store/migrations/2024-02-22-051637_failed_queries/: down.sql  up.sql
crates/store/src/: diesel_queries.rs  lib.rs  loader.rs  models.rs  schema.rs  tests.rs
crates/store/src/db/: schema.rs
crates/store/src/store/: diesel_queries.rs  mod.rs
crates/store/tests/: common.rs  tests.rs
crates/store/tests/common/: mod.rs
frontend/: Cargo.toml  build.rs  index.html
frontend/graphql/: api_schema.graphql
frontend/graphql/queries/: deployments.graphql  launch_cross_check_report.graphql  poi_cross_check_reports.graphql  proofs_of_indexing.graphql
frontend/src/: main.rs  routes.rs
frontend/src/components/: mod.rs  navigation.rs  navigation_menu_item.rs  page.rs  page_header.rs
frontend/src/contexts/: mod.rs  theme.rs
frontend/src/pages/: mod.rs
frontend/src/pages/poi_explorer/: deployment.rs  index.rs  mod.rs
frontend/src/pages/poi_reports/: index.rs  indexers.rs  mod.rs
graphix-lib/: Cargo.toml
graphix-lib/src/: block_choice.rs  lib.rs  types.rs
graphix-lib/src/graphql_api/: mod.rs
(+129 files in other folders)
