[package]
name = "graph-ixi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.48"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
eventuals = "0.6.6"
futures = "0.3.18"
futures-retry = "0.6.0"
graphql_client = "0.10.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[dev-dependencies]
