[package]
name = "graph-ixi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.48"
async-trait = "0.1.52"
chrono = "0.4.19"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
eventuals = "0.6.6"
futures = "0.3.18"
futures-retry = "0.6.0"
graphql_client = "0.10.0"
hex = "0.4.3"
itertools = "0.10.3"
nanoid = "0.4.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
tracing-test = "0.2.1"
warp = "0.3.2"

[dev-dependencies]
once_cell = "1.9.0"
rand = { version = "0.8.4", features = ["small_rng"] }
