[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-axum = "7"
async-trait = "0.1.52"
axum = "0.7"
bigdecimal = "0.4"
chrono = "0.4"
cid = "0.11"
clap = "4"
derive_more = "0.99"
diesel = "2"
diesel-async = "0.4"
diesel_async_migrations = "0.12"
futures = "0.3.18"
graphql_client = "0.13"
hex = "0.4.3"
itertools = "0.12"
num-traits = "0.2"
once_cell = "1.9.0"
prometheus = { version = "0.13", default-features = false }
prometheus_exporter = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.4"
reqwest = "0.11"
schemars = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
testcontainers = "0.15"
testcontainers-modules = "0.3"
thiserror = "1"
tokio = "1.14.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
tracing-test = "0.2.1"
url = "2.5"
uuid = "1"
