[package]
name = "graph-ixi-api-server"
version = "0.1.0"
authors = ["Jannis Pohlmann <jannis@edgeandnode.com>"]
edition = "2021"
default-run = "graph-ixi-api-server"

[[bin]]
name = "graph-ixi-api-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.52"
async-graphql = "3.0.22"
async-graphql-warp = "3.0.22"
chrono = "0.4.19"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
graph-ixi-common = { path = "../common" }
structopt = "0.3.26"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
warp = "0.3.2"
