[package]
name = "graphix-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
css-colors = "1.0.1"
gloo = "0.6.0"
graphql_client = "0.10.0"
log = "0.4.14"
once_cell = "1.9.0"
reqwasm = "0.4.0"
serde = "1.0.136"
serde_json = "1.0.78"
stylist = { version = "0.10.0", features = ["yew_integration"] }
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"

[build-dependencies]
async-graphql = "3.0.22"
graphix-common = { path = "../backend/crates/common" }
