[package]
name = "graphix-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
graphix-store = { path = "../store" }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
graphix-lib = { path = ".", features = ["tests"] }
once_cell = { version = "1.9.0" }
quickcheck = "1"
quickcheck_macros = "1"
rand = { version = "0.8.4", features = ["small_rng"] }
