[package]
name = "graphix_autogen_config_json_schema"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[build-dependencies]
graphix_lib = { path = "../graphix_lib" }
schemars = { workspace = true }
serde_json = { workspace = true }
