[package]
name = "graphix_autogen_graphql_schema"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[build-dependencies]
async-graphql = { workspace = true }
graphix_lib = { path = "../graphix_lib" }
