[package]
name = "graphix_common_types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono", "uuid"] }
chrono = "0.4"
diesel = "2"
hex = "0.4"
quickcheck = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"

[dev-dependencies]
quickcheck_macros = "1"
