[package]
name = "graphix_common_types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["chrono", "uuid"] }
chrono = { workspace = true }
cid = { workspace = true, features = ["serde", "arb"] }
derive_more = { workspace = true }
diesel = { workspace = true }
hex = { workspace = true }
quickcheck = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
quickcheck_macros = { workspace = true }
