[package]
name = "graphix_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = "7"
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
diesel = "2"
futures = "0.3"
graphix_common_types = { path = "../common-types" }
graphix_indexer_client = { path = "../indexer-client" }
graphix_network_sg_client = { path = "../network-sg-client" }
graphix_store = { path = "../store" }
hex = "0.4"
once_cell = { version = "1", optional = true }
prometheus = { version = "0.13", optional = true }
prometheus_exporter = "0.8"
rand = { version = "0.8", optional = true }
schemars = { version = "0.8", features = ["chrono", "url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[features]
tests = ["async-trait", "once_cell", "prometheus", "rand"]

[dev-dependencies]
graphix_common_types = { path = "../common-types" }
graphix_lib = { path = ".", features = ["tests"] }
itertools = "0.12"
once_cell = { version = "1.9.0" }
prometheus = "0.13"
quickcheck = "1"
quickcheck_macros = "1"
rand = { version = "0.8.4", features = ["small_rng"] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["macros"] }
