[package]
name = "graphix"
version = "0.1.0"
authors = ["Jannis Pohlmann <jannis@edgeandnode.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = "7"
async-trait = "0.1.52"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.18"
graphix_common_types = { path = "../common-types" }
graphix_indexer_client = { path = "../indexer-client" }
graphix_lib = { path = "../graphix-lib" }
graphix_network_sg_client = { path = "../network-sg-client" }
graphix_store = { path = "../store" }
nanoid = "0.4.0"
prometheus_exporter = "0.8.5"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

# From api-server
async-graphql-axum = "7"
axum = "0.7"

[dev-dependencies]
graphix_lib = { path = "../graphix-lib", features = ["tests"] }
hex = "0.4.3"
once_cell = "1.9.0"
rand = { version = "0.8.4", features = ["small_rng"] }
tracing-test = "0.2.1"
