[package]
name = "graphix"
version = "0.1.0"
authors = ["Jannis Pohlmann <jannis@edgeandnode.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer_client" }
graphix_lib = { path = "../graphix_lib" }
graphix_network_sg_client = { path = "../network_sg_client" }
graphix_store = { path = "../store" }
nanoid = { workspace = true }
prometheus_exporter = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

# From api-server
async-graphql-axum = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
graphix_lib = { path = "../graphix_lib", features = ["tests"] }
hex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tracing-test = { workspace = true }
