[package]
name = "graphix_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["dataloader"] }
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer_client" }
graphix_network_sg_client = { path = "../network_sg_client" }
graphix_store = { path = "../store" }
hex = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true, optional = true }
#prometheus = { version = "0.13", optional = true }
prometheus_exporter = { workspace = true }
rand = { workspace = true, optional = true }
schemars = { workspace = true, features = ["chrono", "url"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }

[features]
tests = ["async-trait", "once_cell", "rand"]

[dev-dependencies]
graphix_common_types = { path = "../common_types" }
graphix_lib = { path = ".", features = ["tests"] }
itertools = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
