[package]
name = "graphix_indexer_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphql_client = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
