[package]
name = "graphix_indexer_client"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphql_client = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
