[package]
name = "graphix_network_sg_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer-client" }
hex = "0.4"
prometheus = { version = "0.13", default-features = false }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
