[package]
name = "graphix_network_sg_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer_client" }
hex = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
