[package]
name = "graphix_store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true, features = ["dataloader"] }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid", "extras", "numeric"] }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }
diesel_async_migrations = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer_client" }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
graphix_common_types = { path = "../common_types" }
graphix_lib = { path = "../graphix_lib" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["macros"] }
