[package]
name = "graphix_store"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["dataloader"] }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid", "extras", "numeric"] }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }
diesel_async_migrations = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_indexer_client = { path = "../indexer_client" }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
derive_more = { workspace = true }
graphix_common_types = { path = "../common_types" }
graphix_lib = { path = "../graphix_lib" }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["macros"] }
