[package]
name = "graphix-api-server"
version = "0.1.0"
authors = ["Jannis Pohlmann <jannis@edgeandnode.com>"]
edition = "2021"
default-run = "graphix-api-server"

[[bin]]
name = "graphix-api-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.52"
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
graphix-common = { path = "../common" }
serde_json = "1"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
