[package]
name = "graphix-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.48"
async-graphql = "5"
async-trait = "0.1.52"
chrono = "0.4.19"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.0"
eventuals = "0.6.6"
futures = "0.3.18"
futures-retry = "0.6.0"
graphql_client = "0.12.0"
hex = "0.4.3"
itertools = "0.10.3"
prometheus = "0.13.3"
prometheus_exporter = "0.8.5"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.78"
serde_yaml = "0.9"
tiny-cid = "0.3.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
rand = { version = "0.8.4", features = ["small_rng"], optional = true }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
once_cell = { version = "1.9.0", optional = true }
uuid = { version = "1.3", features = ["serde", "v4"] }

[features]
tests = ["rand", "once_cell"]

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
once_cell = { version = "1.9.0" }
