[package]
name = "graphix-cross-checker"
version = "0.1.0"
authors = ["Jannis Pohlmann <jannis@edgeandnode.com>"]
edition = "2021"
default-run = "graphix-cross-checker"

[[bin]]
name = "graphix-cross-checker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.48"
async-trait = "0.1.52"
clap = { version = "4", features = ["derive"] }
eventuals = "0.6.6"
futures = "0.3.18"
graphix-common = { path = "../common" }
itertools = "0.10.3"
nanoid = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
warp = "0.3.2"

[dev-dependencies]
graphix-common = { path = "../common", features = ["tests"] }
hex = "0.4.3"
once_cell = "1.9.0"
rand = { version = "0.8.4", features = ["small_rng"] }
tracing-test = "0.2.1"
